commit tree 7dff8ebdf175fa2d166c2686ff62f52e1787650c

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+" alt="Lion logo"/>
+    <Img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+    https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="Lion logo"
+    title="The Animal kingdom"/>
+    -- Your code here -->
   </body>
 </html>
